Added functionality to turn wrongly filled boxes red in Addition workspace

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorAccent">#D50000</color>
     <color name="disableColor">#f0f0f0</color>
     <color name="answerDigitColor">#00e676</color>
+    <color name="wrongAnswerColor">#ff0000</color>
+    <color name="whiteColor">#ffffff</color>
 </resources>
