--- a/app/src/main/res/layout/activity_addition_workspace.xml
+++ b/app/src/main/res/layout/activity_addition_workspace.xml
@@ -462,6 +462,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
+                    android:id="@+id/evaluateAdditionWorkspace"
                     style="@style/Widget.AppCompat.Button"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
@@ -490,7 +491,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
-                    android:id="@+id/submitButtonTestPage"
+                    android:id="@+id/saveAnswerAddition"
                     style="@style/Widget.AppCompat.Button.Borderless"
                     android:layout_width="150dp"
                     android:layout_height="70dp"
@@ -503,7 +504,21 @@
                     android:text="Save my answer!"
                     android:textColor="@color/colorTextPrimary" />
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+                <Space
+                    android:layout_width="25dp"
+                    android:layout_height="wrap_content"/>
+
+                <Button
+                    style="@style/Widget.AppCompat.Button"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_refresh_black_24dp"
+                    android:fadingEdgeLength="5dp"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:onClick="repaint"
+                    android:textColor="@color/colorTextPrimary" />
+            </LinearLayout>
 
 
     </LinearLayout>
