--- a/app/src/main/res/layout/activity_addition_workspace.xml
+++ b/app/src/main/res/layout/activity_addition_workspace.xml
@@ -270,6 +270,7 @@
                     android:focusableInTouchMode="false"
                     android:textSize="20sp"
                     android:onClick="questionEnable"
+                    android:maxLength="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.531"
