Multiplication and Addition workspace finalized

--- a/app/src/main/res/layout/activity_multiplication_workspace.xml
+++ b/app/src/main/res/layout/activity_multiplication_workspace.xml
@@ -560,7 +560,7 @@
                 android:id="@+id/line1_digit1"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -583,7 +583,7 @@
                 android:id="@+id/line1_digit2"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -606,7 +606,7 @@
                 android:id="@+id/line1_digit3"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -629,7 +629,7 @@
                 android:id="@+id/line1_digit4"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -652,7 +652,7 @@
                 android:id="@+id/line1_digit5"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -675,7 +675,7 @@
                 android:id="@+id/line1_digit6"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -714,7 +714,7 @@
                 android:id="@+id/line2_digit1"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -737,7 +737,7 @@
                 android:id="@+id/line2_digit2"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -760,7 +760,7 @@
                 android:id="@+id/line2_digit3"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -783,7 +783,7 @@
                 android:id="@+id/line2_digit4"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -806,7 +806,7 @@
                 android:id="@+id/line2_digit5"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -829,7 +829,7 @@
                 android:id="@+id/line2_digit6"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -868,7 +868,7 @@
                 android:id="@+id/line3_digit1"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -891,7 +891,7 @@
                 android:id="@+id/line3_digit2"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -914,7 +914,7 @@
                 android:id="@+id/line3_digit3"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -937,7 +937,7 @@
                 android:id="@+id/line3_digit4"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -960,7 +960,7 @@
                 android:id="@+id/line3_digit5"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -983,7 +983,7 @@
                 android:id="@+id/line3_digit6"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1032,7 +1032,7 @@
                 android:id="@+id/result_digit1"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1054,7 +1054,7 @@
                 android:id="@+id/result_digit2"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1076,7 +1076,7 @@
                 android:id="@+id/result_digit3"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1098,7 +1098,7 @@
                 android:id="@+id/result_digit4"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1126,7 +1126,7 @@
                 android:maxLength="1"
                 android:focusableInTouchMode="false"
                 android:onClick="answerEnable"
-                android:textColorHint="@color/colorPrimary"
+                android:textColorHint="@color/colorTextPrimary"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.531"
@@ -1142,7 +1142,7 @@
                 android:id="@+id/result_digit6"
                 android:background="@drawable/digit_disable"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorTextPrimary"
                 android:layout_gravity="center"
                 android:inputType="number"
                 android:textSize="20sp"
@@ -1181,7 +1181,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <Button
-                    android:id="@+id/evaluateAdditionWorkspace"
+                    android:id="@+id/evaluateMultiplicationWorkspace"
                     style="@style/Widget.AppCompat.Button"
                     android:layout_width="100dp"
                     android:layout_height="70dp"
