Removed hardcoded strings from xml files.

--- a/app/src/main/res/layout/activity_addition_workspace.xml
+++ b/app/src/main/res/layout/activity_addition_workspace.xml
@@ -36,16 +36,15 @@
                 android:layout_gravity="center"
                 card_view:cardCornerRadius="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Please press 'Evaluate' before saving answer"
-                android:gravity="center"
-                android:textColor="@color/colorTextPrimary"
-                android:textSize="15sp"
-                android:layout_gravity="center"
-                android:textStyle="bold">
-            </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/workspace_instruction_1"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"></TextView>
 
             </androidx.cardview.widget.CardView>
 
@@ -60,16 +59,15 @@
                 android:layout_gravity="center"
                 card_view:cardCornerRadius="10dp">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Click on 'Reload' symbol to reset the canvas"
-                android:gravity="center"
-                android:textColor="@color/colorTextPrimary"
-                android:textSize="15sp"
-                android:layout_gravity="center"
-                android:textStyle="bold">
-            </TextView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:text="@string/workspace_instruction_2"
+                    android:textColor="@color/colorTextPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold"></TextView>
 
             </androidx.cardview.widget.CardView>
 
@@ -94,12 +92,12 @@
                     android:id="@+id/questionBodyMultiplicationWorkspace"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@color/colorPrimary"
+                    android:elevation="4dp"
                     android:gravity="center"
                     android:padding="10dp"
+                    android:text="@string/question_fetching"
                     android:textColor="@color/colorTextPrimary"
-                    android:background="@color/colorPrimary"
-                    android:text="Fetching..."
-                    android:elevation="4dp"
                     android:textSize="35sp" />
             </androidx.cardview.widget.CardView>
             <Space
@@ -522,7 +520,7 @@
                     android:fadingEdgeLength="5dp"
                     android:foreground="?attr/selectableItemBackground"
                     android:onClick="checkBlocks"
-                    android:text="Evaluate"
+                    android:text="@string/evaluate"
                     android:textColor="@color/colorTextPrimary" />
             </androidx.cardview.widget.CardView>
             <Space
