--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -81,42 +81,42 @@
                         android:layout_height="match_parent"/>
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="5dp"
-                    android:textStyle="bold"
-                    android:textColor="@color/colorTextPrimary"
-                    android:text="User profile"
-                    android:textSize="30sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:padding="5dp"
+                        android:text="@string/user_profile"
+                        android:textColor="@color/colorTextPrimary"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Name: "
-                    android:textStyle="bold"
+                    android:text="@string/name_display"
                     android:textColor="@color/colorTextPrimary"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/user_grade"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:text="Grade: "
+                    android:text="@string/grade_display"
                     android:textColor="@color/colorTextPrimary"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/user_school"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:textStyle="bold"
+                    android:text="@string/school_display"
                     android:textColor="@color/colorTextPrimary"
-                    android:text="School: "
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
