--- a/app/src/main/res/layout/test_page.xml
+++ b/app/src/main/res/layout/test_page.xml
@@ -35,16 +35,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:padding="10dp"
+            android:id="@+id/questionNumber_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@color/colorTextPrimary"
-            android:textColor="@color/colorPrimary"
             android:gravity="center"
-            android:textSize="20sp"
-            android:id="@+id/questionNumber_txt"
-            android:text="Question ??" />
+            android:padding="10dp"
+            android:text="@string/question_number_default"
+            android:textColor="@color/colorPrimary"
+            android:textSize="20sp" />
     </androidx.cardview.widget.CardView>
 
     <Space
@@ -68,12 +68,12 @@
             android:id="@+id/questionBodyMultiplicationWorkspace"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
             android:gravity="center"
             android:padding="10dp"
+            android:text="@string/question_fetching"
             android:textColor="@color/colorTextPrimary"
-            android:background="@color/colorPrimary"
-            android:text="Fetching..."
-            android:elevation="4dp"
             android:textSize="35sp" />
     </androidx.cardview.widget.CardView>
     </LinearLayout>
@@ -138,7 +138,7 @@
                 android:fadingEdgeLength="5dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:onClick="finishTest"
-                android:text="Save Progress"
+                android:text="@string/save_progress_button"
                 android:textColor="@color/colorTextPrimary" />
         </androidx.cardview.widget.CardView>
         <Space
@@ -167,7 +167,7 @@
                 android:fadingEdgeLength="5dp"
                 android:foreground="?attr/selectableItemBackground"
                 android:onClick="nextQuestion"
-                android:text="Submit and Next"
+                android:text="@string/submit_next_button"
                 android:textColor="@color/colorTextPrimary" />
         </androidx.cardview.widget.CardView>
     </LinearLayout>
