--- a/app/src/main/res/layout/launch_screen.xml
+++ b/app/src/main/res/layout/launch_screen.xml
@@ -15,7 +15,7 @@
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="center"
-        android:src="@drawable/mathest_logo"
+        android:src="@drawable/mathest_new"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
